[gd_scene load_steps=8 format=3 uid="uid://dhp1adm7e5rtp"]

[ext_resource type="Script" path="res://scripts/player_item_list.gd" id="1_4yilk"]
[ext_resource type="StyleBox" uid="uid://ixt5lyof837o" path="res://resources/styles/background_panel.tres" id="1_u6pd5"]
[ext_resource type="FontVariation" uid="uid://bt4v0q31h0w7t" path="res://resources/fonts/default_bold.tres" id="3_nm0xm"]
[ext_resource type="Texture2D" uid="uid://b06jolkd8pju8" path="res://assets/icons/down.svg" id="3_tq2wr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ba5xe"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vmobh"]
color = Color(1, 1, 1, 0.4)
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s5yq2"]
content_margin_right = 4.0

[node name="PlayerItemList" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_u6pd5")
script = ExtResource("1_4yilk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ba5xe")

[node name="Labels" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PlayerNameSortButton" type="Button" parent="VBoxContainer/Panel/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_nm0xm")
text = "Name"
flat = true
alignment = 0
icon_alignment = 2

[node name="Arrow" type="TextureRect" parent="VBoxContainer/Panel/Labels/PlayerNameSortButton"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_tq2wr")
stretch_mode = 3

[node name="Panel2" type="Panel" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_vmobh")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_s5yq2")
vertical_scroll_mode = 2

[node name="PlayerEntryContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[connection signal="pressed" from="VBoxContainer/Panel/Labels/PlayerNameSortButton" to="." method="_on_sort_button_pressed" binds= ["player_name"]]
